--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,12 +7,14 @@ django-filter==2.4.0
 django-simple-history==2.11.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
+gunicorn==20.0.4
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 packaging==20.4
+psycopg2==2.8.5
 pyparsing==2.4.7
 pytz==2020.1
 requests==2.24.0
